[package]
authors = ["blackbeam <aikorsky@gmail.com>"]
description = "Tokio based asynchronous MySql client library."
documentation = "https://docs.rs/mysql_async"
keywords = ["mysql", "database", "asynchronous", "async"]
license = "MIT OR Apache-2.0"
name = "mysql_async"
readme = "README.md"
repository = "https://github.com/blackbeam/mysql_async"
version = "0.36.1"
exclude = ["test/*"]
edition = "2021"
categories = ["asynchronous", "database"]

[dependencies]
bytes = "1.10"
crossbeam = "0.8"
flate2 = { version = "1", default-features = false }
futures-core = "0.3"
futures-util = "0.3"
futures-sink = "0.3"
keyed_priority_queue = "0.4"
lru = "0.16"
mysql_common = { version = "0.35", default-features = false }
lazy_static = "1"
mio = { version = "1", features = ["os-poll", "net"] }
once_cell = "1"
pem = "3"
percent-encoding = "2"
pin-project = "1"
rand = "0"
serde = "1"
serde_json = "1"
socket2 = "0"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "fs", "net", "time", "rt", "sync"] }
tokio-util = { version = "0", features = ["codec", "io"] }
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
], optional = true }
twox-hash = { version = "2", default-features = false, features = ["xxhash64"] }
url = "2"
hdrhistogram = { version = "7", optional = true }
crossbeam-queue = "0"

[dependencies.tokio-rustls]
version = "0"
default-features = false
optional = true

[dependencies.tokio-native-tls]
version = "0"
optional = true

[dependencies.native-tls]
version = "0"
optional = true

[dependencies.rustls]
version = "0"
default-features = false
features = ["std"]
optional = true

[dependencies.rustls-pemfile]
version = "2"
optional = true

[dependencies.webpki-roots]
version = "1"
optional = true

[dev-dependencies]
waker-fn = "1"
tempfile = "3"
socket2 = { version = "0", features = ["all"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[features]
default = [
    "flate2/zlib",
    "mysql_common/bigdecimal",
    "mysql_common/rust_decimal",
    "mysql_common/time",
    "mysql_common/frunk",
    "mysql_common/chrono",
    "derive",
    "native-tls-tls",
    "binlog",
]
default-rustls = [
    "default-rustls-no-provider", "aws-lc-rs",
    "binlog"
]
default-rustls-ring = ["default-rustls-no-provider", "ring"]

default-rustls-no-provider = [
    "flate2/rust_backend",
    "derive",
    "rustls-tls",
    "tls12",
    "mysql_common/bigdecimal",
    "mysql_common/rust_decimal",
    "mysql_common/time",
    "mysql_common/frunk"
]

# minimal feature set with system flate2 impl
minimal = ["flate2/zlib"]
# minimal feature set with rust flate2 impl
minimal-rust = ["flate2/rust_backend"]

# native-tls based TLS support
native-tls-tls = ["native-tls", "tokio-native-tls"]

# rustls based TLS support
rustls-tls = [
    "rustls",
    "tokio-rustls",
    "webpki-roots",
    "rustls-pemfile",
]

aws-lc-rs = ["rustls/aws_lc_rs", "tokio-rustls/aws_lc_rs"]
ring = ["rustls/ring", "tokio-rustls/ring"]
tls12 = ["rustls/tls12", "tokio-rustls/tls12"]

binlog = ["mysql_common/binlog"]

# mysql_common features
derive = ["mysql_common/derive"]
chrono = ["mysql_common/chrono"]
time = ["mysql_common/time"]
bigdecimal = ["mysql_common/bigdecimal"]
rust_decimal = ["mysql_common/rust_decimal"]
frunk = ["mysql_common/frunk"]
client_ed25519 = ["mysql_common/client_ed25519"]

# other features
tracing = ["dep:tracing"]
nightly = []

[lib]
name = "mysql_async"
path = "src/lib.rs"

[profile.bench]
debug = true
